# reedline

./: Cargo.toml
examples/: completions.rs  fuzzy_completions.rs  ide_completions.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_history.rs
src/: engine.rs  enums.rs
src/completion/: base.rs  default.rs  history.rs
src/menu/: columnar_menu.rs  description_menu.rs  ide_menu.rs  list_menu.rs  menu_functions.rs
src/painting/: painter.rs
